--- a/web/src/main/webapp/WEB-INF/view/common/header.jspx
+++ b/web/src/main/webapp/WEB-INF/view/common/header.jspx
@@ -1,8 +1,7 @@
 <jsp:root xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:c="http://java.sun.com/jsp/jstl/core"
-          xmlns:sec="http://www.springframework.org/security/tags"
-          version="2.0">
+          version="2.0" xmlns:spring="http://www.springframework.org/tags">
     <style>
         .logout {
             margin: 10px;
@@ -10,13 +9,21 @@
     </style>
 
     <header class="clearfix">
-        <div class="privateInfo">
-            <sec:authorize ifAnyGranted="WAY2HAVE_NOT_PHONE_USER, WAY2_UNCONFIRMED_USER">
-                <span>Hello, <sec:authentication property="principal.displayName"/></span>
-                <c:url var="logout" value="/j_spring_security_logout"/>
-                <a class="logout" href="${logout}" id="logOutButton">Log Out</a>
-            </sec:authorize>
-        </div>
+
+        <h1 style="text-align: center"><c:out value="Заказ гостиницы"/></h1>
+        <h2><spring:message code="page.title"/></h2>
+        <a href="${requestScope['javax.servlet.forward.request_uri']}?locale=ru" style="padding: 5px">RU</a>
+        <a href="${requestScope['javax.servlet.forward.request_uri']}?locale=en" style="padding: 5px">EN</a>
+
+
+<!--        <span style="float: right">-->
+<!--    <a href="?lang=en">en</a>-->
+<!--    |-->
+<!--    <a href="?lang=de">ru</a>-->
+<!--</span>-->
+        <p><spring:message code="label.registration"/></p>
+        <p><spring:message code="label.login"/></p>
+
 
     </header>
 
