--- a/web/src/main/webapp/WEB-INF/view/layouts/default.jspx
+++ b/web/src/main/webapp/WEB-INF/view/layouts/default.jspx
@@ -8,25 +8,11 @@
             doctype-system="http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"
             doctype-root-element="html" omit-xml-declaration="false"/>
 <jsp:directive.page pageEncoding="UTF-8" contentType="text/html; UTF-8"/>
+
 <head>
-    <![CDATA[
-    <script src="../assests/js/jquery-1.11.1.min.js" type="text/javascript"><jsp:text/></script>
-    <script src="../assests/js/utils.js" type="text/javascript"><jsp:text/></script>
-    <link rel="stylesheet" href="../assests/css/style.css" type="text/css">
-    ]]>
-    <tiles:insertAttribute name="title"/>
-    <c:set var="title">
-        <spring:message code="page.title"/>
-    </c:set>
-    <c:if test="${not empty title}">
-        <title>${title}</title>
-    </c:if>
+    <title>hotel</title>
 </head>
 <body>
-<div style="float: right;">
-    <a href="${pageContext.request.contextPath}/page?locale=ru" style="padding: 5px">RU</a>
-    <a href="${pageContext.request.contextPath}/page?locale=en" style="padding: 5px">EN</a>
-</div>
 <tiles:insertAttribute name="header"/>
 <tiles:insertAttribute name="body"/>
 <tiles:insertAttribute name="footer"/>
