--- a/web/src/main/webapp/WEB-INF/view/common/footer.jspx
+++ b/web/src/main/webapp/WEB-INF/view/common/footer.jspx
@@ -5,8 +5,8 @@
 
     <footer class="newFooter">
         <div class="footer">
-            FOOTER
-            <spring:message code="page.footer"/>
+
+Footer
         </div>
     </footer>
 
