--- a/web/src/main/webapp/WEB-INF/view/page/registration.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/registration.jspx
@@ -1,3 +1,55 @@
+<!--<jsp:root xmlns="http://www.w3.org/1999/xhtml"-->
+<!--          xmlns:jsp="http://java.sun.com/JSP/Page"-->
+<!--          xmlns:s="http://www.springframework.org/tags/form"-->
+<!--          xmlns:spring="http://www.springframework.org/tags"-->
+<!--          xmlns:c="http://java.sun.com/jsp/jstl/core"-->
+<!--          version="2.0">-->
+
+<!--<html>-->
+<!--<head>-->
+<!--    <title>Registration</title>-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<h3><spring:message code="label.userRegistration"/></h3>-->
+<!--<form action="${pageContext.request.contextPath}/registration" method="post">-->
+
+<!--    <input id="login" type="text" name="login" required=""/>-->
+<!--    <label for="login"><spring:message code="button.login"/></label> <br/>-->
+
+<!--    <input id="password" type="password" name="password" required=""/>-->
+<!--    <label for="password"><spring:message code="button.password"/></label> <br/>-->
+
+<!--    <input id="firstName" type="text" name="firstName" required="" />-->
+<!--    <label for="firstName"><spring:message code="label.nameClient"/></label> <br/>-->
+
+<!--    <input  id="secondName" type="text" name="secondName" required="" />-->
+<!--    <label for="secondName"><spring:message code="label.surname"/></label> <br/>-->
+
+<!--    <input id="email" type="email" name="email" required="" />-->
+<!--    <label for="email">email</label> <br/>-->
+
+<!--    <input id="phone" type="tel" name="phone" required="" />-->
+<!--    <label for="phone"><spring:message code="label.phone"/></label> <br/>-->
+
+
+<!--    <button name="registration"><spring:message code="button.registration"/></button>-->
+<!--</form>-->
+
+<!--<p style="color: red">${errorUser}</p>-->
+<!--<a href="${pageContext.request.contextPath}/logout"><spring:message code="button.logout"/></a>-->
+
+<!--</body>-->
+<!--</html>-->
+
+<!--</jsp:root>-->
+
+
+
+
+
+
+
 <jsp:root xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:s="http://www.springframework.org/tags/form"
@@ -11,35 +63,43 @@
 </head>
 <body>
 
-<h3>Регистрация пользователя</h3>
-<form action="${pageContext.request.contextPath}/registration" method="post">
+<h3><spring:message code="label.userRegistration"/></h3>
+<s:form id ="userReg" name="AuthUserAndClient" action="${pageContext.request.contextPath}/registration" method="post">
 
-    <input id="login" type="text" name="login" required=""/>
-    <label for="login">Логин</label> <br/>
+    <s:input id="login" type="text" value="" maxlength="20" path="login"/>
+    <s:errors path="login" cssStyle="color: red" />
+    <label for="login"><spring:message code="button.login"/></label> <br/>
 
-    <input id="password" type="password" name="password" required=""/>
-    <label for="password">Пароль</label> <br/>
+    <s:input id="password" type="password" value="" path="password" />
+    <s:errors path="password" cssStyle="color: red" />
+    <label for="password"><spring:message code="button.password"/></label> <br/>
 
-    <input id="firstName" type="text" name="firstName" required="" />
-    <label for="firstName">Имя</label> <br/>
+    <s:input id="firstName" type="text" value="" path="firstName"  />
+    <s:errors path="firstName" cssStyle="color: red" />
+    <label for="firstName"><spring:message code="label.nameClient"/></label> <br/>
 
-    <input  id="secondName" type="text" name="secondName" required="" />
-    <label for="secondName">Фамилия</label> <br/>
+    <s:input  id="secondName" type="text" value="" path="secondName"  />
+    <s:errors path="secondName" cssStyle="color: red" />
+    <label for="secondName"><spring:message code="label.surname"/></label> <br/>
 
-    <input id="email" type="email" name="email" required="" />
+    <s:input id="email" type="email" value="" path="email" />
+    <s:errors path="email" cssStyle="color: red" />
     <label for="email">email</label> <br/>
 
-    <input id="phone" type="tel" name="phone" required="" />
-    <label for="phone">phone</label> <br/>
+    <s:input id="phone" type="tel" value=""  path="phone" />
+    <s:errors path="phone" cssStyle="color: red" />
+    <label for="phone"><spring:message code="label.phone"/></label> <br/>
 
 
-    <input type="submit" value="Зерегистрироваться"/>
-</form>
+    <button name="registration"><spring:message code="button.registration"/></button>
+</s:form>
 
 <p style="color: red">${errorUser}</p>
-<a href="${pageContext.request.contextPath}/index">Home</a>
+<a href="${pageContext.request.contextPath}/logout"><spring:message code="button.logout"/></a>
 
 </body>
 </html>
 
 </jsp:root>
+
+
