add Spring Security

--- a/web/src/main/webapp/WEB-INF/view/common/footer.jspx
+++ b/web/src/main/webapp/WEB-INF/view/common/footer.jspx
@@ -5,8 +5,8 @@
 
     <footer class="newFooter">
         <div class="footer">
-
-Footer
+            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+            © 2020 Егоров Александр, по всем вопросам пишите по адресу ealex5@mail.ru
         </div>
     </footer>
 
