--- a/web/src/main/webapp/WEB-INF/view/page/registration.jspx
+++ b/web/src/main/webapp/WEB-INF/view/page/registration.jspx
@@ -1,55 +1,3 @@
-<!--<jsp:root xmlns="http://www.w3.org/1999/xhtml"-->
-<!--          xmlns:jsp="http://java.sun.com/JSP/Page"-->
-<!--          xmlns:s="http://www.springframework.org/tags/form"-->
-<!--          xmlns:spring="http://www.springframework.org/tags"-->
-<!--          xmlns:c="http://java.sun.com/jsp/jstl/core"-->
-<!--          version="2.0">-->
-
-<!--<html>-->
-<!--<head>-->
-<!--    <title>Registration</title>-->
-<!--</head>-->
-<!--<body>-->
-
-<!--<h3><spring:message code="label.userRegistration"/></h3>-->
-<!--<form action="${pageContext.request.contextPath}/registration" method="post">-->
-
-<!--    <input id="login" type="text" name="login" required=""/>-->
-<!--    <label for="login"><spring:message code="button.login"/></label> <br/>-->
-
-<!--    <input id="password" type="password" name="password" required=""/>-->
-<!--    <label for="password"><spring:message code="button.password"/></label> <br/>-->
-
-<!--    <input id="firstName" type="text" name="firstName" required="" />-->
-<!--    <label for="firstName"><spring:message code="label.nameClient"/></label> <br/>-->
-
-<!--    <input  id="secondName" type="text" name="secondName" required="" />-->
-<!--    <label for="secondName"><spring:message code="label.surname"/></label> <br/>-->
-
-<!--    <input id="email" type="email" name="email" required="" />-->
-<!--    <label for="email">email</label> <br/>-->
-
-<!--    <input id="phone" type="tel" name="phone" required="" />-->
-<!--    <label for="phone"><spring:message code="label.phone"/></label> <br/>-->
-
-
-<!--    <button name="registration"><spring:message code="button.registration"/></button>-->
-<!--</form>-->
-
-<!--<p style="color: red">${errorUser}</p>-->
-<!--<a href="${pageContext.request.contextPath}/logout"><spring:message code="button.logout"/></a>-->
-
-<!--</body>-->
-<!--</html>-->
-
-<!--</jsp:root>-->
-
-
-
-
-
-
-
 <jsp:root xmlns="http://www.w3.org/1999/xhtml"
           xmlns:jsp="http://java.sun.com/JSP/Page"
           xmlns:s="http://www.springframework.org/tags/form"
@@ -64,35 +12,30 @@
 <body>
 
 <h3><spring:message code="label.userRegistration"/></h3>
-<s:form id ="userReg" name="AuthUserAndClient" action="${pageContext.request.contextPath}/registration" method="post">
+<form action="${pageContext.request.contextPath}/registration" method="post">
 
-    <s:input id="login" type="text" value="" maxlength="20" path="login"/>
-    <s:errors path="login" cssStyle="color: red" />
+
+    <input id="login" type="text" name="login" pattern="[A-Za-zА-Яа-я0-9]{1,50}" required=""/>
     <label for="login"><spring:message code="button.login"/></label> <br/>
 
-    <s:input id="password" type="password" value="" path="password" />
-    <s:errors path="password" cssStyle="color: red" />
+    <input id="password" type="password" name="password" pattern="[A-Za-zА-Яа-я0-9]{1,50}" required=""/>
     <label for="password"><spring:message code="button.password"/></label> <br/>
 
-    <s:input id="firstName" type="text" value="" path="firstName"  />
-    <s:errors path="firstName" cssStyle="color: red" />
+    <input id="firstName" type="text" name="firstName" pattern="[A-Za-zА-Яа-я0-9]{1,50}" required="" />
     <label for="firstName"><spring:message code="label.nameClient"/></label> <br/>
 
-    <s:input  id="secondName" type="text" value="" path="secondName"  />
-    <s:errors path="secondName" cssStyle="color: red" />
+    <input  id="secondName" type="text" name="secondName" pattern="[A-Za-zА-Яа-я0-9]{1,50}" required="" />
     <label for="secondName"><spring:message code="label.surname"/></label> <br/>
 
-    <s:input id="email" type="email" value="" path="email" />
-    <s:errors path="email" cssStyle="color: red" />
+    <input id="email" type="email" name="email" placeholder="mail@mail.com"
+           pattern="^([a-z0-9_-]+\.)*[a-z0-9_-]+@[a-z0-9_-]+(\.[a-z0-9_-]+)*\.[a-z]{2,6}$" required="" />
     <label for="email">email</label> <br/>
 
-    <s:input id="phone" type="tel" value=""  path="phone" />
-    <s:errors path="phone" cssStyle="color: red" />
+    <input id="phone" type="tel" name="phone" placeholder="+375291111111" pattern="^\+\d{12}" required="" />
     <label for="phone"><spring:message code="label.phone"/></label> <br/>
 
-
     <button name="registration"><spring:message code="button.registration"/></button>
-</s:form>
+</form>
 
 <p style="color: red">${errorUser}</p>
 <a href="${pageContext.request.contextPath}/logout"><spring:message code="button.logout"/></a>
@@ -101,5 +44,66 @@
 </html>
 
 </jsp:root>
+
+
+
+
+
+
+
+<!--<jsp:root xmlns="http://www.w3.org/1999/xhtml"-->
+<!--          xmlns:jsp="http://java.sun.com/JSP/Page"-->
+<!--          xmlns:s="http://www.springframework.org/tags/form"-->
+<!--          xmlns:spring="http://www.springframework.org/tags"-->
+<!--          xmlns:c="http://java.sun.com/jsp/jstl/core"-->
+<!--          version="2.0">-->
+
+<!--<html>-->
+<!--<head>-->
+<!--    <title>Registration</title>-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<h3><spring:message code="label.userRegistration"/></h3>-->
+<!--&lt;!&ndash;@elvariable id="client" type=""&ndash;&gt;-->
+<!--<s:form id ="userReg" name="AuthUserAndClient" action="${pageContext.request.contextPath}/registration" method="post"-->
+<!--modelAttribute="authUser" >-->
+
+
+<!--    <label for="login"><spring:message code="button.login"/></label> <br/>-->
+<!--    <s:input id="login" type="text" value="" maxlength="50" path="login"/>-->
+<!--    <s:errors path="login" cssStyle="color: red" />-->
+
+<!--&lt;!&ndash;    <s:input id="password" type="password" value="" path="password" />&ndash;&gt;-->
+<!--&lt;!&ndash;    <s:errors path="password" cssStyle="color: red" />&ndash;&gt;-->
+<!--&lt;!&ndash;    <label for="password"><spring:message code="button.password"/></label> <br/>&ndash;&gt;-->
+
+<!--&lt;!&ndash;    <s:input id="firstName" type="text" value="" path="firstName"  />&ndash;&gt;-->
+<!--&lt;!&ndash;    <s:errors path="firstName" cssStyle="color: red" />&ndash;&gt;-->
+<!--&lt;!&ndash;    <label for="firstName"><spring:message code="label.nameClient"/></label> <br/>&ndash;&gt;-->
+
+<!--&lt;!&ndash;    <s:input  id="secondName" type="text" value="" path="secondName"  />&ndash;&gt;-->
+<!--&lt;!&ndash;    <s:errors path="secondName" cssStyle="color: red" />&ndash;&gt;-->
+<!--&lt;!&ndash;    <label for="secondName"><spring:message code="label.surname"/></label> <br/>&ndash;&gt;-->
+
+<!--&lt;!&ndash;    <s:input id="email" type="email" value="" path="email" />&ndash;&gt;-->
+<!--&lt;!&ndash;    <s:errors path="email" cssStyle="color: red" />&ndash;&gt;-->
+<!--&lt;!&ndash;    <label for="email">email</label> <br/>&ndash;&gt;-->
+
+<!--&lt;!&ndash;    <s:input id="phone" type="tel" value=""  path="phone" />&ndash;&gt;-->
+<!--&lt;!&ndash;    <s:errors path="phone" cssStyle="color: red" />&ndash;&gt;-->
+<!--&lt;!&ndash;    <label for="phone"><spring:message code="label.phone"/></label> <br/>&ndash;&gt;-->
+
+
+<!--    <button name="registration"><spring:message code="button.registration"/></button>-->
+<!--</s:form>-->
+
+<!--<p style="color: red">${errorUser}</p>-->
+<!--<a href="${pageContext.request.contextPath}/logout"><spring:message code="button.logout"/></a>-->
+
+<!--</body>-->
+<!--</html>-->
+
+<!--</jsp:root>-->
 
 
